[FIX] sap.m.ObjectStatus: Truncates when used inside Table
BCP: 1670424957

--- a/src/sap.m/src/sap/m/themes/base/ObjectStatus.less
+++ b/src/sap.m/src/sap/m/themes/base/ObjectStatus.less
@@ -52,6 +52,9 @@ html.sap-phone .sapMObjStatusIcon {
 
 .sapUiTableCell .sapMObjStatus {
 	font-size: @sapMFontMediumSize;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .sapUiTableCell .sapMObjStatusText,
